test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/01-crd.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- crd.yaml
assert:
- crd-assert.yaml
