test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- crd.yaml
- policy.yaml
assert:
- crd-assert.yaml
- policy-ready.yaml
