test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-external-secret-prefix
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
