test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/resource-mutated.yaml
apiVersion: external-secrets.io/v1beta1
kind: ExternalSecret
metadata:
  name: example
  namespace: add-external-secret-prefix
spec:
  data:
  - remoteRef:
      conversionStrategy: Default
      decodingStrategy: None
      key: prefix-remote-secret
      property: name.first
    secretKey: firstname
  - remoteRef:
      conversionStrategy: Default
      decodingStrategy: None
      key: prefix-friend-secret
      property: friends.1.first
    secretKey: first_friend
  refreshInterval: 1m
  secretStoreRef:
    kind: SecretStore
    name: aws
  target:
    creationPolicy: Owner
    deletionPolicy: Retain
    name: secret-to-be-created
