test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/resource.yaml
apiVersion: external-secrets.io/v1beta1
kind: ExternalSecret
metadata:
  name: example
  namespace: add-external-secret-prefix
spec:
  refreshInterval: 1m
  secretStoreRef:
    name: aws
    kind: SecretStore
  target:
    name: secret-to-be-created
    creationPolicy: Owner
  data:
  - secretKey: firstname
    remoteRef:
      key: remote-secret
      property: "name.first"
      conversionStrategy: Default
      decodingStrategy: None
  - secretKey: first_friend
    remoteRef:
      key: friend-secret
      property: "friends.1.first"
      conversionStrategy: Default
      decodingStrategy: None
