test/conformance/kuttl/mutate/refactor/add-external-secret-prefix/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1beta1
kind: CustomResourceDefinition
metadata:
  name: externalsecrets.external-secrets.io
status:
  acceptedNames:
    kind: ExternalSecret
    listKind: ExternalSecretList
    plural: externalsecrets
    singular: externalsecret
  storedVersions:
  - v1alpha1
  - v1beta1
